--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "YOUR DISCORD API TOKEN HERE",
-	"prefix": "!",
+	"token": "NTE2OTcxNDY5Nzg4NDEzOTcy.Dt7bNg.TeMkBByKmowY2TGJ-PRlS7E_ljE",
+	"prefix": "2",
 	"ytApiKey": "YOUR YOUTUBE API TOKEN HERE"
 }
